# KriptoProvider

./: CMakeLists.txt  CMakeLists.txt.user.47b7540  Crypto.cpp  Crypto.h  README.md  actionwithcontainer.cpp  actionwithcontainer.h  actionwithcontainer.ui  cryptofunc.h  entropy.cpp  entropy.h  entropy.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  qblockcipher.cpp  qblockcipher.h
